Add use_oidc_authentication = true

--- a/test/angharad-ci.conf
+++ b/test/angharad-ci.conf
@@ -50,6 +50,7 @@ benoic_modules_path="/usr/lib/angharad/benoic/"
 oauth_scope="angharad"
 
 # oidc parameters
+use_oidc_authentication = true # default true, on false no authentication is required
 oidc =
 {
 #  server_remote_config = "https://glewlwyd.tld/api/oidc/.well-known/openid-configuration"
@@ -59,7 +60,6 @@ oidc =
 #  realm = "taliesin"
 #  aud = "me"
 #  dpop_max_iat = 60
-
 }
 
 # MariaDB/Mysql database connection
