--- a/docs/angharad.conf.sample
+++ b/docs/angharad.conf.sample
@@ -23,7 +23,59 @@ url_prefix_carleon="carleon"
 url_prefix_gareth="gareth"
 
 # path to static files for /static url
-app_files_path="/usr/local/share/angharad/webapp"
+app_files_path="/usr/share/angharad/webapp"
+
+# access-control-allow-origin value
+allow_origin="*"
+
+# log mode (console, syslog, file)
+log_mode="file"
+
+# log level: NONE, ERROR, WARNING, INFO, DEBUG
+log_level="INFO"
+
+# output to log file (required if log_mode is file)
+log_file="/tmp/angharad.log"
+
+# path to modules folder for carleon
+carleon_services_path="/usr/lib/angharad/carleon"
+
+# path to modules folder for benoic
+benoic_modules_path="/usr/lib/angharad/benoic"
+
+# OAuth2 scope required
+oauth_scope="angharad"
+
+# MariaDB/Mysql database connection
+#database =
+#{
+#  type = "mariadb";
+#  host = "localhost";
+#  user = "angharad";
+#  password = "angharad";
+#  dbname = "angharad";
+#  port = 0;
+#};
+
+# SQLite database connection
+database =
+{
+   type = "sqlite3";
+   path = "/var/cache/angharad/angharad.db";
+};
+
+# oidc parameters
+use_oidc_authentication = true # default true, on false no authentication is required
+oidc =
+{
+#  server_remote_config = "https://glewlwyd.tld/api/oidc/.well-known/openid-configuration"
+#  server_remote_config_verify_cert = true
+  server_public_jwks = "../public-test.jwks"
+#  iss = "https://glewlwyd.tld/"
+#  realm = "taliesin"
+#  aud = "me"
+#  dpop_max_iat = 60
+}
 
 # mime types for webapp files
 app_files_mime_types =
@@ -77,57 +129,3 @@ app_files_mime_types =
     type = "image/x-icon"
   }
 )
-
-# access-control-allow-origin value
-allow_origin="*"
-
-# log mode (console, syslog, file)
-log_mode="file"
-
-# log level: NONE, ERROR, WARNING, INFO, DEBUG
-log_level="INFO"
-
-# output to log file (required if log_mode is file)
-log_file="/tmp/angharad.log"
-
-# path to modules folder for carleon
-carleon_services_path="/usr/local/lib/angharad/carleon"
-
-# path to modules folder for benoic
-benoic_modules_path="/usr/local/lib/angharad/benoic"
-
-# OAuth2 scope required
-oauth_scope="angharad"
-
-# MariaDB/Mysql database connection
-#database =
-#{
-#  type = "mariadb";
-#  host = "localhost";
-#  user = "angharad";
-#  password = "angharad";
-#  dbname = "angharad";
-#  port = 0;
-#};
-
-# SQLite database connection
-database =
-{
-   type = "sqlite3";
-   path = "/var/cache/angharad/angharad.db";
-};
-
-# jwt parameters
-jwt =
-{
-   key_size = 512
-   
-   use_rsa = true
-   rsa_pub_file = "/usr/etc/taliesin/public-rsa.pem"
-   
-   use_ecdsa = false
-   ecdsa_pub_file = "/usr/etc/taliesin/public-ecdsa.pem"
-   
-   use_sha = false
-   sha_secret = "secret"
-}
