--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Build and test
 
 # Controls when the action will run. 
 on:
@@ -39,7 +39,7 @@ jobs:
           cmake -DBUILD_IDWCC=OFF -DWITH_MOCKSERVICE=ON -DWITH_MOCKDEV=ON -DBUILD_TESTING=ON -DWITH_PGSQL=OFF -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib ..
           make
           sudo make install
-          rnbyc -j -g ECDSA256 -x -o ../private-test.jwks -p ../public-test.jwks
+          rnbyc -j -g EC256 -x -o ../private-test.jwks -p ../public-test.jwks
           sqlite3 /tmp/angharad.db < ../docs/angharad.sqlite3.sql
           angharad -c ../test/angharad-ci.conf &
           export G_PID=$!
