--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,7 @@
 # Environment variables
 PREFIX=/usr/local
 CC=gcc
-CFLAGS=-c -Wall -Werror -Wextra -D_REENTRANT -I$(PREFIX)/include $(ADDITIONALFLAGS)
+CFLAGS=-c -Wall -Werror -Wextra -Wconversion -D_REENTRANT -I$(PREFIX)/include $(ADDITIONALFLAGS)
 LIBS=-L$(PREFIX)/lib -lc -lm -lpthread -ldl -ljansson -lulfius -lhoel -lyder -lorcania -liddawc -lmicrohttpd -lz
 
 # subprojects locations
