--- a/src/benoic/device-modules/Makefile
+++ b/src/benoic/device-modules/Makefile
@@ -19,16 +19,17 @@
 # License along with this library.	If not, see <http://www.gnu.org/licenses/>.
 #
 
-PREFIX=/usr/local
+PREFIX=/usr
 MODULES_TARGET=$(PREFIX)/lib/angharad/benoic
 LIBZWPATH=/usr/lib
 CC=gcc
 CPP=g++
-CFLAGS=-c -fPIC -Wall -Wno-unknown-pragmas -D_REENTRANT -shared -nostartfiles -I$(PREFIX)/include -Wno-pragmas $(ADDITIONALFLAGS)
+CFLAGS=-c -fPIC -Wall -Wconversion -Wconversion -Wno-unknown-pragmas -D_REENTRANT -I$(PREFIX)/include -Wno-pragmas $(ADDITIONALFLAGS)
 LIBS=-L$(PREFIX)/lib -lc -ljansson -lyder -lorcania -lulfius -ldl
 LDFLAGS += -Wl,-R '-Wl,-R$$ORIGIN' -lopenzwave
 
-oz_include=$(shell pkg-config --cflags-only-I libopenzwave)
+#oz_include=$(shell pkg-config --cflags-only-I libopenzwave)
+oz_include=-I/usr/include/openzwave/
 
 OZINCLUDES:= $(oz_include) $(oz_include)command_classes $(oz_include)platform $(oz_include)value_classes
 
@@ -52,16 +53,22 @@ device-taulas.o: device-taulas.c
 libdevtaulas.so: device-taulas.o
 	$(CC) -shared -Wl,-soname,libdevtaulas.so -o libdevtaulas.so device-taulas.o $(LIBS)
 
+device-esp8266.o: device-esp8266.c
+	$(CC) $(CFLAGS) -Werror -Wextra $(FLAGS_YDER) device-esp8266.c
+
+libdevesp8266.so: device-esp8266.o
+	$(CC) -shared -Wl,-soname,libdevesp8266.so -o libdevesp8266.so device-esp8266.o $(LIBS)
+
 clean:
 	rm -f *.o *.so
 
 debug: ADDITIONALFLAGS=-DDEBUG -g -O0
 
-debug: libdevzwave.so libdevtaulas.so
+debug: libdevzwave.so libdevtaulas.so libdevesp8266.so libdevmock.so
 
 release: ADDITIONALFLAGS=-O3
 
-release: libdevzwave.so libdevtaulas.so
+release: libdevzwave.so libdevtaulas.so libdevesp8266.so
 
 install:
 	mkdir -p $(MODULES_TARGET)
