--- a/webapp-src/Makefile
+++ b/webapp-src/Makefile
@@ -40,4 +40,4 @@ build-webapp:
 
 install-webapp:
 	find $(WEBAPP_DEST) ! -name config.json ! -name webapp ! -name .gitignore -delete
-	cp -R dist/css/ dist/favicon.ico dist/fonts/ dist/bundle.js dist/bundle.js.LICENSE.txt dist/img/ dist/index.html dist/js/ dist/locales/ $(WEBAPP_DEST)
+	cp -R dist/css/ dist/favicon.ico dist/fonts/ dist/bundle.js dist/bundle.js.LICENSE.txt dist/img/ dist/index.html dist/js/ dist/locales/ dist/config.json.sample $(WEBAPP_DEST)
